# psx-emulator

./: .gitmodules  CMakeLists.txt  bios-1001.txt  main.cpp  shader_vertex.glsl
source/: CMakeLists.txt  bios.cpp  bios.h  cpu.cpp  cpu.h  dma.cpp  dma.h  gpu.cpp  gpu.h  instruction_set.cpp  instruction_set.h  main.cpp  memory_map.cpp  memory_map.h  ram.cpp  ram.h  registers.cpp  registers.h  timers.cpp  timers.h  type_helpers.h
source/opengl/: buffers.h  renderer.cpp  renderer.h
tests/: CMakeLists.txt  instruction_set_tests.cpp
